--- a/notebooks/Primer_Library_Generation.ipynb
+++ b/notebooks/Primer_Library_Generation.ipynb
@@ -4,23 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Primer library generation for RBD deep mutational scanning"
+    "# Primer library generation for deep mutational scanning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "font.sans-serif Arial\n",
-      "mathtext.default regular\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
@@ -76,7 +67,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define parameters for where to read and write files, max and minimum primer Tm. Also, the script **only generates primers to mutagenize upper case sequence, the surrounding lower case is ignored and used for primer annealing. `firstcodon` defines which codon in the upper case section to start on**. Also, `library.annotate_NNN_primers()` similarly defines the ORF as upper case characters found in the file at `sequence_file_path` "
+    "Define parameters for where to read and write files, max and minimum primer Tm. Also, the script **only generates primers to mutagenize upper case sequence, the surrounding lower case is ignored and used for primer annealing. `firstcodon` defines which codon in the upper case section to start on**.\n",
+    "\n",
+    "Note that `spikedisplay.library.annotate_NNN_primers()` similarly defines the ORF as upper case characters found in the file at `sequence_file_path` \n",
+    "\n",
+    "Make sure that any .txt files containing sequences you want to mutagenize are in the same directory as this notebook"
    ]
   },
   {
@@ -142,15 +137,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quick check to see if generated NNN library has a reasonable range of Tm_NN"
+    "### Quick check to see if generated NNN library has expected range of melt temps\n",
+    "\n",
+    "Note that this melt temp is calculated using `Bio.SeqUtils.MeltingTemp.Tm_NN` which assumes average melt temp for N bases. When `Tm_real` is calculated between the actual oligo library and WT sequence, `Bio.SeqUtils.MeltingTemp.Tm_GC` is used"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -23468,8 +23472,15 @@
     "          'mismatch_weight': 1,\n",
     "          'usage_weight': 1}\n",
     "\n",
-    "second_library_df, second_library_df_preselection_library_df = library.generate_library(primer_df,\n",
+    "second_library_df, second_preselection_library_df = library.generate_library(primer_df,\n",
     "                                                                                        **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supplemental Materials"
    ]
   },
   {
@@ -58439,13 +58450,7 @@
       "Evaluating codons for amino acid N\n",
       "Evaluating codons for amino acid K\n",
       "Evaluating codons for amino acid V\n",
-      "Evaluating codons for amino acid D\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Evaluating codons for amino acid D\n",
       "Evaluating codons for amino acid E\n",
       "Evaluating codons for amino acid S\n",
       "Evaluating codons for amino acid C\n",
